--- a/.github/workflows/ipo_reminder.yml
+++ b/.github/workflows/ipo_reminder.yml
@@ -28,4 +28,4 @@ jobs:
         env:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
-        run: python ipo_reminder.py
+        run: python -m ipo_reminder.ipo_reminder
