fix(actions): Use correct secret names in workflow
The workflow was using incorrect environment variable names (`EMAIL_USER`, `EMAIL_PASS`) which caused the application to fail because it couldn't find the required secrets.

This commit updates the workflow to use the correct secret names (`OUTLOOK_EMAIL`, `OUTLOOK_APP_PASSWORD`, `RECIPIENT_EMAIL`) as defined in the project's configuration and README.

--- a/.github/workflows/ipo_reminder.yml
+++ b/.github/workflows/ipo_reminder.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Run IPO Reminder
         env:
-          EMAIL_USER: ${{ secrets.EMAIL_USER }}
-          EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
+          OUTLOOK_EMAIL: ${{ secrets.OUTLOOK_EMAIL }}
+          OUTLOOK_APP_PASSWORD: ${{ secrets.OUTLOOK_APP_PASSWORD }}
+          RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
         run: python -m ipo_reminder.ipo_reminder
