Update email configuration to use SMTP with App Password
- Switch to SMTP with App Password authentication
- Update configuration and environment variables
- Clean up Azure AD related code

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+# Core dependencies
 requests>=2.32.0
 beautifulsoup4>=4.12.3
+python-dotenv>=1.0.0
+
+# Data processing
 pandas>=2.2.2
 python-dateutil>=2.9.0.post0
-python-dotenv>=1.0.0
-msal>=1.24.0
+
+# Email
+secure-smtplib>=0.1.1
+email-validator>=2.1.0
