--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,15 @@ AZURE_CLIENT_ID=your_client_id_here
 AZURE_TENANT_ID=your_tenant_id_here
 AZURE_CLIENT_SECRET=your_client_secret_here
 
-# Email Configuration
+# Email Configuration (SMTP with App Password)
+# For Outlook/Office 365
+SMTP_SERVER=smtp.office365.com
+SMTP_PORT=587  # 587 for STARTTLS, 465 for SSL
 OUTLOOK_EMAIL=your_email@example.com
-RECIPIENT_EMAIL=recipient@example.com  # Optional, defaults to OUTLOOK_EMAIL
+OUTLOOK_APP_PASSWORD=your_app_password_here
+
+# Optional: If different from sender email
+RECIPIENT_EMAIL=recipient@example.com
 
 # Web Scraping Configuration (optional, defaults are usually fine)
 REQUEST_TIMEOUT=30
