Update emailer.py to use Microsoft Graph API with OAuth2 authentication

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
 # Core dependencies
 requests>=2.32.0
-beautifulsoup4>=4.12.3
-python-dotenv>=1.0.0
+beautifulsoup4>=4.9.3
+python-dotenv>=0.19.0
+requests>=2.25.1
+pytz>=2021.1
+msal>=1.20.02
+python-dateutil>=2.9.0.post0
 
 # Data processing
 pandas>=2.2.2
-python-dateutil>=2.9.0.post0
 
 # Email
 secure-smtplib>=0.1.1
 email-validator>=2.1.0
+msal>=1.33.0
+requests>=2.32.5
+exchangelib>=5.5.1
