🧹 Clean up repository - Remove junk and cache files
✨ Repository Cleanup:
- Removed all __pycache__ directories and .pyc files
- Deleted temporary test files (keeping main test_email.py)
- Removed duplicate setup files (.env.example, .env.template, setup_gmail.sh, setup_secrets.sh)
- Deleted temporary documentation files (EMAIL_SETUP_OPTIONS.md, SETUP_COMPLETE.md)
- Removed pytest cache directory

📋 Enhanced .gitignore:
- Added OS-specific file patterns (.DS_Store, Thumbs.db)
- Added temporary file patterns (*.tmp, *.temp, *.bak, *.log)
- Added IDE file patterns (.idea/, *.swp, *.swo)
- Added application-specific ignores for temporary test files

🎯 Result: Clean, professional repository with only essential files
📁 Kept: Core application files, main test file, documentation, configuration

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,35 @@ coverage.xml
 # VS Code
 .vscode/
 
+# Operating System files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+*.log
+logs/
+
+# IDE files
+.idea/
+*.swp
+*.swo
+*~
+
+# Application specific temporary files
+test_*.py
+!test_email.py
+SETUP_*.md
+EMAIL_SETUP_*.md
+
 # mypy
 .mypy_cache/
 .dmypy.json
