🔄 Remove 'bot' terminology throughout the project
✨ Changes Made:
- Updated all email content: 'IPO Reminder Bot' → 'IPO Reminder'
- Changed email sender name: 'IPO Reminder Bot 🤖' → 'IPO Reminder 📈'
- Updated log messages: 'IPO Reminder Bot started' → 'IPO Reminder started'
- Modified GitHub workflow name: 'IPO Reminder Bot' → 'IPO Reminder'
- Updated project name in pyproject.toml: 'ipo-reminder-bot' → 'ipo-reminder'
- Changed all documentation references
- Updated config comments and descriptions
- Removed duplicate emailer_clean.py file

🎯 Result:
- Cleaner, more professional terminology
- No functional changes to the system
- All email content now uses 'IPO Reminder' instead of 'bot'
- Service identity updated from bot to reminder service

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "ipo-reminder-bot"
+name = "ipo-reminder"
 version = "0.1.0"
-description = "A bot that sends daily IPO reminders with Apply/Avoid suggestions via email."
+description = "A service that sends daily IPO reminders with Apply/Avoid suggestions via email."
 authors = [
     { name = "Dinesh Reddy", email = "reddy.dinesh@live.com" }
 ]
