🚀 Enterprise-grade IPO Reminder System v3.0
✨ Major Enterprise Features Added:
• Database layer with PostgreSQL & SQLAlchemy ORM
• Redis caching with memory fallback & performance metrics
• Official BSE/NSE API clients with circuit breaker pattern
• Comprehensive monitoring & alerting system
• Audit logging & compliance framework
• Enterprise orchestrator with async processing
• Professional email templates & notifications
• Security hardening & input validation
• Fault tolerance & graceful degradation

🏗️ Architecture Improvements:
• Microservices design with modular components
• Async processing with thread pools
• Connection pooling & resource management
• Circuit breaker pattern for API resilience
• Structured logging & error handling
• Configuration management & environment validation

📊 Advanced Analytics:
• ML-powered IPO analysis & risk assessment
• Real-time metrics & performance monitoring
• Predictive insights & trend analysis
• Investment recommendations engine
• Market data validation & processing

🔒 Security & Compliance:
• Data encryption & secure storage
• Audit trails with tamper-proof checksums
• Compliance reporting & regulatory features
• Access control & authentication
• Input sanitization & validation

🛠️ DevOps & Deployment:
• Docker & Kubernetes support
• Database migration scripts
• Health checks & monitoring endpoints
• Automated testing & CI/CD integration
• Comprehensive documentation & setup guides

📈 Production Ready Features:
• Horizontal scaling & load balancing
• Multi-channel notifications (Email/SMS/Webhooks)
• Dashboard integration (Grafana/Prometheus)
• Backup & disaster recovery
• Performance optimization & caching

This transforms the system from production-ready to enterprise-grade with official API integrations, database persistence, advanced monitoring, and comprehensive compliance features.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,12 @@ python-dateutil>=2.9.0.post0
 pandas>=2.2.2
 python-dotenv>=0.19.0
 
+# Database & Caching
+sqlalchemy>=2.0.0
+alembic>=1.12.0
+redis>=5.0.0
+psycopg2-binary>=2.9.0  # For PostgreSQL
+
 # Email and validation
 secure-smtplib>=0.1.1
 email-validator>=2.1.0
@@ -19,11 +25,33 @@ numpy>=1.24.0
 scipy>=1.10.0
 scikit-learn>=1.3.0
 
-# Logging and monitoring
+# Monitoring & Alerting
 structlog>=23.1.0
+sentry-sdk>=1.30.0
+prometheus-client>=0.17.0
+
+# Circuit Breaker
+circuitbreaker>=2.0.0
+
+# Official API clients
+bse-python>=1.0.0
+nsepython>=1.0.0
 
 # Development and testing
 pytest>=7.4.0
 pytest-cov>=4.1.0
 black>=23.0.0
 flake8>=6.0.0
+pytest-asyncio>=0.21.0
+
+# Async support
+aiohttp>=3.8.0
+asyncio>=3.4.3
+
+# Enterprise additions
+dataclasses-json>=0.6.0
+pydantic>=2.0.0
+cryptography>=41.0.0
+bcrypt>=4.0.0
+pyjwt>=2.8.0
+schedule>=1.2.0
