--- a/.github/workflows/ipo-reminder.yml
+++ b/.github/workflows/ipo-reminder.yml
@@ -86,6 +86,37 @@ jobs:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/ipo_reminder
       run: |
         echo "📊 Setting up database..."
+        echo "Database URL: $DATABASE_URL"
+
+        # Wait for PostgreSQL to be ready
+        echo "⏳ Waiting for PostgreSQL to be ready..."
+        for i in {1..30}; do
+          if pg_isready -h localhost -p 5432 -U postgres; then
+            echo "✅ PostgreSQL is ready!"
+            break
+          fi
+          echo "Waiting... ($i/30)"
+          sleep 2
+        done
+
+        # Test database connection
+        echo "🔍 Testing database connection..."
+        python -c "
+        import os
+        from sqlalchemy import create_engine, text
+        try:
+            engine = create_engine(os.getenv('DATABASE_URL'))
+            with engine.connect() as conn:
+                result = conn.execute(text('SELECT version();'))
+                version = result.fetchone()[0]
+                print(f'✅ Connected to PostgreSQL: {version[:50]}...')
+        except Exception as e:
+            print(f'❌ Database connection failed: {e}')
+            exit(1)
+        "
+
+        # Run database setup
+        echo "🏗️ Running database setup..."
         python setup_database.py setup
 
     - name: Run Enterprise IPO Reminder
@@ -138,7 +169,14 @@ jobs:
         # Run enterprise orchestrator
         echo "🏢 Starting Enterprise IPO Orchestrator..."
         cd /home/runner/work/ipo-reminder/ipo-reminder
-        python -m ipo_reminder
+
+        # Run with error handling
+        if python -m ipo_reminder; then
+            echo "✅ IPO Reminder execution completed successfully!"
+        else
+            echo "❌ IPO Reminder execution failed!"
+            exit 1
+        fi
 
         echo ""
         echo "✅ Enterprise IPO Reminder workflow completed!"
