--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,6 +1,9 @@
 name: Tests
 
 on:
+  schedule:
+    # Run at 6 AM IST (00:30 UTC) every day
+    - cron: '30 0 * * *'
   workflow_dispatch:
 
 jobs:
