Fix database configuration and workflow structure

--- a/.github/workflows/ipo-reminder.yml
+++ b/.github/workflows/ipo-reminder.yml
@@ -33,18 +33,21 @@ jobs:
 
     services:
       postgres:
-        image: postgres:15
+        image: postgres:15-alpine
         env:
-          POSTGRES_DB: ipo_reminder
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: ipo_reminder
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-        ports:
-          - 5432:5432
+        # Initialize with SQL commands
+        volumes:
+          - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql
 
       redis:
         image: redis:7-alpine
