--- a/.github/workflows/ipo-reminder.yml
+++ b/.github/workflows/ipo-reminder.yml
@@ -104,10 +104,11 @@ jobs:
           missing=1
         fi
         if [ "$missing" -eq 1 ]; then
-          echo "❌ One or more required secrets are missing. Please add them in GitHub repository settings under Settings > Secrets and variables > Actions."
-          exit 1
+          echo "⚠️  One or more required secrets are missing. Will use .env file values as fallback."
+          echo "For production deployments, please add them in GitHub repository settings under Settings > Secrets and variables > Actions."
+        else
+          echo "✅ All required secrets are present"
         fi
-        echo "✅ All required secrets are present"
 
     - name: Setup database
       env:
@@ -181,33 +182,7 @@ jobs:
 
         # Test database connection with explicit URL (using psycopg2 for sync connection test)
         echo "🔍 Testing database connection..."
-        TEST_DB_URL="postgresql+psycopg2://$DB_USER:$DB_PASSWORD@localhost:5432/$TARGET_DB"
-        python -c "
-import os
-from sqlalchemy import create_engine, text
-try:
-    # Use psycopg2 for sync connection test
-    engine = create_engine('$TEST_DB_URL')
-    with engine.connect() as conn:
-        result = conn.execute(text('SELECT version();'))
-        version = result.fetchone()[0]
-        print(f'✅ Connected to PostgreSQL: {version[:50]}...')
-        
-        # Verify user has proper permissions
-        result = conn.execute(text("SELECT current_user, current_database();"))
-        user, db = result.fetchone()
-        print(f'🔑 Connected as user: {user} to database: {db}')
-        
-        # Check if user can create tables
-        conn.execute(text('CREATE TABLE IF NOT EXISTS test_permissions (id SERIAL PRIMARY KEY, name TEXT);'))
-        conn.execute(text('DROP TABLE IF EXISTS test_permissions;'))
-        print('✅ Verified user has proper permissions')
-        
-except Exception as e:
-    print(f'❌ Database connection failed: {e}')
-    print(f'Connection URL used: $TEST_DB_URL')
-    exit(1)
-"
+        TEST_DB_URL="postgresql+psycopg2://$DB_USER:$DB_PASSWORD@localhost:5432/$TARGET_DB" python test_db_connection.py
 
         # Run database setup with async URL
         echo "🏗️ Running database setup..."
